--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@tsconfig/svelte": "^5.0.4",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -32,9 +33,9 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.25.0",
-		"svelte-check": "^4.0.0",
+		"svelte-check": "^4.1.7",
 		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
+		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
 	},
